crates/oxc_react_compiler/tests/snapshots/async-map-foreach-unused-key.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-map-foreach-unused-key.js
---
function Component() {
	let count = 0;
	const cb = () => count++;
	const callbacks = new Map([[cb, _temp]]);
	callbacks.forEach(_temp2);
	return null;
}
async function _temp2(value) {
	await 0;
	value();
}
function _temp() {}
