crates/oxc_react_compiler/tests/snapshots/async-no-alias-spread-this-arg.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-no-alias-spread-this-arg.js
---
function Component(t0) {
	let count = 0;
	const bad = () => count++;
	const callbacks = [_temp, async () => {
		await 0;
		bad();
	}];
	[0].filter(...callbacks);
	return null;
}
function _temp() {
	return true;
}
