crates/oxc_react_compiler/tests/snapshots/async-object-destructured-safe-member.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-object-destructured-safe-member.js
---
function Component(t0) {
	let count = 0;
	const cb = () => count++;
	const obj = {
		run: async () => {
			await 0;
			cb();
		},
		safe() {}
	};
	const { safe } = obj;
	safe();
	return null;
}
