crates/oxc_react_compiler/tests/snapshots/async-object-selected-member.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-object-selected-member.js
---
function Component() {
	let count = 0;
	const cb = () => count++;
	const obj = {
		bad: async () => {
			await 0;
			cb();
		},
		safe() {}
	};
	obj.safe();
	return null;
}
