crates/oxc_react_compiler/tests/snapshots/async-parameter-unused-callback.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-parameter-unused-callback.js
---
function Component() {
	let count = 0;
	const run = _temp;
	run(() => count++, _temp2);
	return null;
}
function _temp2() {
	return null;
}
async function _temp(unused, cb) {
	await 0;
	cb();
}
